--- a/src/pages/Main/styles.module.css
+++ b/src/pages/Main/styles.module.css
@@ -7,6 +7,6 @@
 .main__news {
     display: grid;
     grid-template-columns: auto 340px;
-    grid-template-rows: min-content auto;
+    grid-template-rows: 58px auto;
     gap: 10px;
 }
