--- a/src/components/SearchInput/styles.module.css
+++ b/src/components/SearchInput/styles.module.css
@@ -33,3 +33,9 @@ input::placeholder {
 .button_img path {
     fill: var(--news-main-color);
 }
+
+@media (max-width: 770px) {
+    .search_input {
+        display: none;
+    }
+}
