--- a/src/components/Banner/styles.module.css
+++ b/src/components/Banner/styles.module.css
@@ -1,7 +1,7 @@
 .container {
+    position: relative;
     width: 100%;
     height: 500px;
-    position: relative;
     border-radius: 20px;
 }
 .image {
@@ -68,5 +68,21 @@
     right: 0;
     border-bottom-right-radius: 20px;
     box-shadow: 0 20px 0 0 var(--news-main-color);
+}
+
+@media (max-width: 770px) {
+    .container {
+        height: 200px;
+    }
+    .bubble_top {
+        width: 70px;
+        height: 42px;
+    }
+    .bubble_top:after {
+        height: 21px;
+    }
+    .bubble_bottom {
+        display: none;
+    }
 }
 
