--- a/src/components/BigCard/styles.module.css
+++ b/src/components/BigCard/styles.module.css
@@ -1,48 +1,79 @@
 .card {
     position: relative;
-    display: inline-block;
     width: 100%;
     margin-bottom: 20px;
-    padding-bottom: 15px;
+    display: inline-block;
     border-radius: 20px;
     background-color: var(--news-background-color);
 }
 .card__title {
-    padding: 15px 15px;
+    padding: 15px;
+    color: #fafafa;
 }
 .card__extra_info {
-    padding: 0 15px;
+    padding: 0 60px 15px 15px;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 8px;
+}
+.card__publishing, .categories {
+    padding: 3px 15px;
+    border-radius: 20px;
 }
 .card__publishing {
-    padding: 3px 15px;
-    border-radius: 20px;
-    color: var(--news-secondary-color);
-    background-color: var(--news-main-color);
+    display: flex;
+    align-items: center;
+    color: #090a0a;
+    background-color: #fafafa;
 }
-.button {
-    padding: 3px 15px;
-    border: 2px solid var(--news-main-color);
-    border-radius: 20px;
-    background-color: transparent;
+.categories {
+    border: 2px solid #fafafa;
     font-size: 0.87em;
     line-height: 1.3;
-    color: var(--news-main-color);
+    color: #fafafa;
+    background-color: transparent;
     transition: all ease-out 0.3s;
 }
-.button:hover {
+.categories:hover {
     border: 2px solid var(--news-active-color);
     color: var(--news-active-color);
 }
+.bubble_bottom {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    bottom: 0;
+    right: 0;
+    border-top-left-radius: 20px;
+    background-color: var(--news-main-color);
+}
+.bubble_bottom:after {
+    content: "";
+    position: absolute;
+    width: 50px;
+    height: 25px;
+    bottom: 0;
+    left: -50px;
+    border-bottom-right-radius: 20px;
+    box-shadow: 20px 0 0 0 var(--news-main-color);
+}
+.bubble_bottom:before {
+    content: "";
+    position: absolute;
+    width: 25px;
+    height: 50px;
+    top: -50px;
+    right: 0;
+    border-bottom-right-radius: 20px;
+    box-shadow: 0 20px 0 0 var(--news-main-color);
+}
 .card__icon {
     position: absolute;
-    top: 3%;
-    right: 3%;
+    bottom: 0;
+    right: 0;
+    padding: 10px;
     display: flex;
     align-items: center;
-    padding: 13px;
     border-radius: 50%;
     background-color: var(--news-background-color);
     transition: background-color 0.3s ease;
@@ -51,6 +82,12 @@
     background-color: var(--news-active-color);
 }
 .arrow {
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
+}
+
+@media (max-width: 770px) {
+    .categories {
+        font-size: 0.625em;
+    }
 }
