--- a/src/components/CardImage/styles.module.css
+++ b/src/components/CardImage/styles.module.css
@@ -1,10 +1,10 @@
-.wrapper {
+.container {
+    position: relative;
     width: 100%;
     height: 170px;
-    position: relative;
     border-radius: 20px;
 }
-.img {
+.image {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -13,9 +13,9 @@
 }
 .bubble {
     content: "";
+    position: absolute;
     width: auto;
     height: 20px;
-    position: absolute;
     bottom: 0;
     right: 0;
     padding: 5px 20px 0 10px;
@@ -45,4 +45,10 @@
     left: -20px;
     border-bottom-right-radius: 10px;
     box-shadow: 10px 0 0 0 var(--news-background-color);
+}
+
+@media (max-width: 770px) {
+    .bubble {
+        font-size: 0.625em;
+    }
 }
