--- a/src/components/LastNewsButton/styles.module.css
+++ b/src/components/LastNewsButton/styles.module.css
@@ -2,11 +2,10 @@
     width: 340px;
     height: 46px;
     position: absolute;
-    padding: 0 10px 0 21px;
+    padding: 0 15px 0 21px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    cursor: pointer;
     border-radius: 10px 20px 20px;
     background-color: var(--news-secondary-color);
     transition: background-color 0.3s ease;
@@ -17,5 +16,11 @@
     background-color: var(--news-active-color);
 }
 .arrow {
-    width: 24px;
+    width: 20px;
+}
+
+@media (max-width: 770px) {
+    .button {
+        display: none;
+    }
 }
