--- a/src/components/LastNewsList/styles.module.css
+++ b/src/components/LastNewsList/styles.module.css
@@ -1,7 +1,12 @@
 .container {
     width: 100%;
-    grid-row: span 2;
     display: flex;
     flex-direction: column;
     gap: 20px;
+}
+
+@media (max-width: 770px) {
+    .container {
+        display: none;
+    }
 }
