--- a/src/components/NewsList/styles.module.css
+++ b/src/components/NewsList/styles.module.css
@@ -3,3 +3,15 @@
     column-count: 2;
     column-gap: 20px;
 }
+
+@media (min-width: 1400px) {
+    .container {
+        column-count: 3;
+    }
+}
+
+@media (max-width: 600px) {
+    .container {
+        column-count: 1;
+    }
+}
