--- a/src/components/BigCard/styles.module.css
+++ b/src/components/BigCard/styles.module.css
@@ -23,7 +23,7 @@
 .card__publishing {
     display: flex;
     align-items: center;
-    color: #090a0a;
+    color: #090B1A;
     background-color: #fafafa;
 }
 .categories {
