--- a/src/components/ThemeButton/styles.module.css
+++ b/src/components/ThemeButton/styles.module.css
@@ -1,19 +1,18 @@
 .theme_button {
-    height: 46px;
-    padding: 10px;
+    padding: 0 10px;
     display: flex;
+    align-items: center;
     gap: 20px;
     border-radius: 20px;
-    background-color: var(--news-secondary-color);
+    background-color: var(--news-background-color);
 }
 .icon {
-    width: 24px;
+    width: 20px;
 }
 
 @media (max-width: 770px) {
     .theme_button {
-        height: 32px;
-        padding: 8px;
+        padding: 0 8px;
         gap: 12px;
         z-index: 1;
     }
