--- a/src/components/Banner/styles.module.css
+++ b/src/components/Banner/styles.module.css
@@ -1,23 +1,31 @@
-.container {
+.banner {
     position: relative;
     width: 100%;
     height: 500px;
     border-radius: 20px;
 }
-.image {
-    width: 100%;
-    object-fit: cover;
+.date {
+    width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px 20px 10px;
+    color: #fafafa;
+    background-color: var(--news-background-color);
+    transition: background-color 0.3s ease;
+    z-index: 1;
 }
 .bubble_top, .bubble_bottom {
-    height: 56px;
     position: absolute;
+    height: 48px;
     background-color: var(--news-main-color);
     transition: background-color 0.3s ease;
 }
 .bubble_top {
-    width: 450px;
+    width: 352px;
     top: 0;
     left: 0;
+    padding-bottom: 10px;
     display: flex;
     gap: 10px;
     border-bottom-right-radius: 20px;
@@ -44,7 +52,7 @@
 }
 .bubble_bottom {
     width: 350px;
-    padding: 10px 0 0 10px;
+    padding: 10px;
     bottom: 0;
     right: 0;
     border-top-left-radius: 20px;
@@ -70,9 +78,18 @@
     box-shadow: 0 20px 0 0 var(--news-main-color);
 }
 
+@media (max-width: 1000px) {
+    .bubble_bottom {
+        width: 250px;
+    }
+}
+
 @media (max-width: 770px) {
-    .container {
+    .banner {
         height: 200px;
+    }
+    .date {
+        display: none;
     }
     .bubble_top {
         width: 70px;
