--- a/src/components/LatestNewsList/styles.module.css
+++ b/src/components/LatestNewsList/styles.module.css
@@ -1,7 +1,8 @@
 .container {
+    position: relative;
     width: 100%;
     height: 500px;
-    position: relative;
+    border-radius: 20px;
 }
 .window {
     width: 100%;
@@ -37,6 +38,10 @@
         height: 200px;
     }
     .toggle_buttons {
-        top: 70px;
+        right: 10px;
+        top: 138px;
+    }
+    .arrowUp, .arrowDown {
+        width: 16px;
     }
 }
