--- a/src/components/BigCard/styles.module.css
+++ b/src/components/BigCard/styles.module.css
@@ -6,6 +6,12 @@
     border-radius: 20px;
     background-color: var(--news-background-color);
 }
+.image {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 20px;
+}
 .card__title {
     padding: 15px;
     color: #fafafa;
@@ -31,19 +37,51 @@
     font-size: 0.87em;
     line-height: 1.3;
     color: #fafafa;
-    background-color: transparent;
     transition: all ease-out 0.3s;
 }
 .categories:hover {
     border: 2px solid var(--news-active-color);
     color: var(--news-active-color);
 }
+.bubble_top {
+    position: absolute;
+    width: auto;
+    height: 20px;
+    top: 130px;
+    right: 0;
+    padding: 5px 20px 0 10px;
+    border-top-left-radius: 10px;
+    font-size: 0.75em;
+    color: var(--news-subtext-color);
+    background-color: var(--news-background-color);
+}
+.bubble_top:after {
+    content: "";
+    position: absolute;
+    width: 20px;
+    height: 40px;
+    bottom: 20px;
+    right: 0;
+    border-bottom-right-radius: 20px;
+    box-shadow: 0 20px 0 0 var(--news-background-color);
+}
+.bubble_top:before {
+    content: "";
+    position: absolute;
+    width: 20px;
+    height: 10px;
+    bottom: 0;
+    left: -20px;
+    border-bottom-right-radius: 10px;
+    box-shadow: 10px 0 0 0 var(--news-background-color);
+}
 .bubble_bottom {
     position: absolute;
     width: 50px;
-    height: 50px;
     bottom: 0;
     right: 0;
+    padding: 10px 0 0 10px;
+    display: flex;
     border-top-left-radius: 20px;
     background-color: var(--news-main-color);
 }
@@ -68,15 +106,13 @@
     box-shadow: 0 20px 0 0 var(--news-main-color);
 }
 .card__icon {
-    position: absolute;
-    bottom: 0;
-    right: 0;
     padding: 10px;
     display: flex;
     align-items: center;
     border-radius: 50%;
     background-color: var(--news-background-color);
     transition: background-color 0.3s ease;
+    z-index: 1;
 }
 .card__icon:hover {
     background-color: var(--news-active-color);
@@ -87,7 +123,7 @@
 }
 
 @media (max-width: 770px) {
-    .categories {
+    .categories, .bubble_top {
         font-size: 0.625em;
     }
 }
