--- a/src/pages/Main/styles.module.css
+++ b/src/pages/Main/styles.module.css
@@ -1,35 +1,21 @@
 .main {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-}
-.main__container {
-    width: 100%;
     display: grid;
     grid-template-columns: auto 340px;
-    grid-template-rows: auto;
-    gap: 10px;
-}
-.main__news {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    overflow: hidden;
-    box-sizing: border-box;
+    grid-template-rows: 500px auto;
+    gap: 20px 20px;
 }
 
 @media (max-width: 1000px) {
-    .main__container {
+    .main {
         grid-template-columns: auto 240px;
+        gap: 15px 10px;
     }
 }
 
 @media (max-width: 770px) {
     .main {
-        gap: 15px;
-    }
-    .main__container {
         grid-template-columns: 1fr;
+        grid-template-rows: 200px auto;
     }
 }
