add filter by region

--- a/src/components/Filter/styles.module.css
+++ b/src/components/Filter/styles.module.css
@@ -1,3 +1,12 @@
+.title {
+    color: var(--news-secondary-color);
+    padding: 10px;
+}
+.filters {
+    max-height: 37vh;
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
 .item, .active {
     margin: 4px;
     padding: 5px 20px;
@@ -19,6 +28,5 @@
 @media (max-width: 770px) {
     .item, .active {
         padding: 5px 15px;
-        font-size: 0.87em;
     }
 }
